Pricing theme updated

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Lahore Greenz</title>
-    <link rel="icon" type="image/x-icon" href="LOGO.png" />
+     <link rel="icon" type="image/x-icon" href="LOGO.png" />
     <title>Lahore Greenz | Farm Houses</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -300,12 +299,12 @@
 
 
                 <div class="col-sm-3 col-md-3 col-lg-3 mt-3">
-                    <div class="card shadow mb-5 mt-5 border-0">
-                        <h1 class="text-success mb-3
+                    <div class="card shadow mb-5 mt-5  border-0 bg-success">
+                        <h1 class="text-white mb-3
                              ml-5 mt-5">
                             2 Kanal
                         </h1>
-                        <ul class="text-dark ml-4 mt-3">
+                        <ul class="text-white ml-4 mt-3">
                             <li>
                                 Total Price 70 lac.
                             </li>
@@ -320,7 +319,7 @@
                             </li>
                         </ul>
                         <button class="border-0"
-                            style="background-image: radial-gradient(circle, #F4DA64, #b58f17); height:50px;">4,37500/Monthly</button>
+                            style="font-weight: bolder; background-image: radial-gradient(circle, #F4DA64, #b58f17); height:50px;">4,37500/Monthly</button>
                     </div>
                 </div>
 
@@ -346,18 +345,18 @@
                             </li>
                         </ul>
                         <button class="border-0"
-                            style="background-image: radial-gradient(circle, #F4DA64, #b58f17); height:50px;">8,75000/Monthly</button>
+                            style="font-weight: bolder; background-image: radial-gradient(circle, #F4DA64, #b58f17); height:50px;">8,75000/Monthly</button>
                     </div>
                 </div>
 
 
                 <div class="col-sm-3 col-md-3 col-lg-3 mt-3">
-                    <div class="card shadow mb-5 mt-5 border-0">
-                        <h1 class="text-success mb-3
+                    <div class="card shadow mb-5 mt-5 border-0 bg-success">
+                        <h1 class="text-white mb-3
                              ml-5 mt-5">
                             6 Kanal
                         </h1>
-                        <ul class="text-dark   ml-4 mt-3">
+                        <ul class="text-white   ml-4 mt-3">
                             <li>
                                 Total Price 2 crore 10 lac.
                             </li>
@@ -372,7 +371,7 @@
                             </li>
                         </ul>
                         <button class="border-0"
-                            style="background-image: radial-gradient(circle, #F4DA64, #b58f17); height:50px;">13,12500/Monthly</button>
+                            style="font-weight: bolder; background-image: radial-gradient(circle, #F4DA64, #b58f17); height:50px;">13,12500/Monthly</button>
                     </div>
 
                 </div>
@@ -399,7 +398,7 @@
                             </li>
                         </ul>
                         <button class="border-0"
-                            style="background-image: radial-gradient(circle, #F4DA64, #b58f17); height:50px;">17,50000/Monthly</button>
+                            style="font-weight: bolder; background-image: radial-gradient(circle, #F4DA64, #b58f17); height:50px;">17,50000/Monthly</button>
                     </div>
                 </div>
             </div>
